# decimus

./: Cargo.toml  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml  rustfmt.toml
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-musl.yml  build-wasi.yml  build-wasm.yml  build-windows.yml  coverage.yml
src/: bid128.rs  bid128_2_str_macros.rs  bid128_2_str_tables.rs  bid128_add.rs  bid128_common.rs  bid128_div.rs  bid128_fma.rs  bid128_mul.rs  bid128_noncomp.rs  bid128_string.rs  bid192.rs  bid256.rs  bid64.rs  bid_conf.rs  bid_convert_data.rs  bid_decimal_data.rs  bid_div_macros.rs  bid_from_int.rs  bid_functions.rs  bid_internal.rs  bid_round.rs  bid_types.rs  lib.rs
tests/: mod.rs  test_debug.rs  test_is_nan.rs  test_is_snan.rs  test_is_zero.rs
tests/test_bid128/: mod.rs  test_bid128_add.rs  test_bid128_div.rs  test_bid128_fma.rs  test_bid128_from_int32.rs  test_bid128_from_string.rs  test_bid128_is_zero.rs  test_bid128_mul.rs  test_bid128_string.rs  test_bid128_sub.rs  test_bid128_to_string.rs
tests/test_bid64/: mod.rs  test_biduint64.rs
